<package>
    <name>ublox_gps_ros</name>
    <version>0.0.1</version>
    <description>
      A ROS driver for U-blox GPS modules.
    </description>
    <author>Hanjie Luo</author>
    <maintainer email="luohanjie@gmail.com">Hanjie Luo</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>  
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>  

    <export>
    </export>

</package>

